--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
   <app-root></app-root>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyBSK2F7Su6zR_VO0-TwNQ12rhgugPX7ATs&libraries=places&sensor=false&language=en"></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key=<your Key>&libraries=places&sensor=false&language=en"></script>
   <!-- <script type="text/javascript" src="http://maps.google.com/maps/api/js?sensor=false"></script> -->
 </body>
 </html>
